# COMP2215-music-buzzer

./: CMakeLists.txt  README.md  build.bat
musical-buzzer/: CMakeLists.txt  musical-buzzer.c  musical-buzzer_complete.c
